ig/ch-epl/1.0.0/profiles.md
# Profiles - CH EPL (R5) v1.0.0

* [**Table of Contents**](toc.md)
* **Profiles**

## Profiles

### Resource Profiles

* [CH EPL Organization](StructureDefinition-ch-epl-organization.md) 
Defines basic constraints and extensions on the Organization resource for use with other CH EPL resources 

* [CH IDMP AdministrableProductDefinition](StructureDefinition-ch-idmp-administrableproductdefinition.md) 
Profile of the AdministrableProductDefinition resource for representing a medicinal product in the final form which is suitable for administering to a patient. 

* [CH IDMP ClinicalUseDefinition Indication](StructureDefinition-ch-idmp-clinicalusedefinition-indication.md) 
Profile of the ClinicalUseDefinition resource for representing an indication. 

* [CH IDMP DocumentReference](StructureDefinition-ch-idmp-documentreference.md) 
Profile of the DocumentReference resource for representing professional information and patient information as attachments. 

* [CH IDMP ManufacturedItemDefinition](StructureDefinition-ch-idmp-manufactureditemdefinition.md) 
Profile of the ManufacturedItemDefinition resource for representing the characteristics of a medicinal manufactured item as contained in a packaged medicinal product. 

* [IDMP Bundle](StructureDefinition-ch-idmp-bundle.md) 
Profile of the Bundle resource for representing the set of resources collected into a single package. 

* [IDMP Ingredient](StructureDefinition-ch-idmp-ingredient.md) 
Profile of the Ingredient resource for representing the material used in the preparation of a medicinal/pharmaceutical product. 

* [IDMP MedicinalProductDefinition](StructureDefinition-ch-idmp-medicinalproductdefinition.md) 
Profile of the MedicinalProductDefinition resource for representing the detailed data of medicinal products. 

* [IDMP PackagedProductDefinition](StructureDefinition-ch-idmp-packagedproductdefinition.md) 
Profile of the PackagedProductDefinition resource for representing a medically related item or items, in a container or package. 

* [IDMP RegulatedAuthorization](StructureDefinition-ch-idmp-regulatedauthorization.md) 
Profile of the RegulatedAuthorization resource for representing the market authorization of a (packaged) medicinal product. 

### Data Type Profiles

*  [GLN Identifier](StructureDefinition-ch-core-gln-identifier.md) 

*  [FOPH Dossier Number](StructureDefinition-ch-foph-dossier-number.md) 

*  [LOC Identifier](StructureDefinition-ch-smc-loc-identifier.md) 

