ig/ch-epl/1.0.1/profiles.md
# Profiles - CH EPL (R5) v1.0.1

* [**Table of Contents**](toc.md)
* **Profiles**

## Profiles

### Summary

This chapter provides detailed descriptions of the FHIR resources and profiles that have been adapted for the Swiss implementation of IDMP. It defines the Swiss profiles of FHIR resources used to support IDMP-based data exchange and specifies how base HL7 FHIR resources are constrained and extended to ensure semantic consistency and regulatory alignment within Switzerland. The documented profiles include detailed element-level constraints, value set bindings, and usage expectations, enabling interoperable and standardized implementation across systems. These definitions constitute the normative basis for representing IDMP concepts using FHIR in Swiss implementations.

### Resource Profiles

* [AdministrableProductDefinition](StructureDefinition-ch-idmp-administrableproductdefinition.md) 
Profile of the AdministrableProductDefinition resource for representing a medicinal product in the final form which is suitable for administering to a patient. 

* [Bundle](StructureDefinition-ch-idmp-bundle.md) 
Profile of the Bundle resource for representing the set of resources collected into a single package. 

* [ClinicalUseDefinition Indication](StructureDefinition-ch-idmp-clinicalusedefinition-indication.md) 
Profile of the ClinicalUseDefinition resource for representing an indication. 

* [DocumentReference](StructureDefinition-ch-idmp-documentreference.md) 
Profile of the DocumentReference resource for representing professional information and patient information as attachments. 

* [Ingredient](StructureDefinition-ch-idmp-ingredient.md) 
Profile of the Ingredient resource for representing the material used in the preparation of a medicinal/pharmaceutical product. 

* [ManufacturedItemDefinition](StructureDefinition-ch-idmp-manufactureditemdefinition.md) 
Profile of the ManufacturedItemDefinition resource for representing the characteristics of a medicinal manufactured item as contained in a packaged medicinal product. 

* [MedicinalProductDefinition](StructureDefinition-ch-idmp-medicinalproductdefinition.md) 
Profile of the MedicinalProductDefinition resource for representing the detailed data of medicinal products. 

* [Organization](StructureDefinition-ch-idmp-organization.md) 
Defines basic constraints and extensions on the Organization resource for use with other CH EPL resources 

* [PackagedProductDefinition](StructureDefinition-ch-idmp-packagedproductdefinition.md) 
Profile of the PackagedProductDefinition resource for representing a medically related item or items, in a container or package. 

* [RegulatedAuthorization](StructureDefinition-ch-idmp-regulatedauthorization.md) 
Profile of the RegulatedAuthorization resource for representing the market authorization of a (packaged) medicinal product. 

### Data Type Profiles

*  [GLN Identifier](StructureDefinition-ch-core-gln-identifier.md) 

*  [EMA LOC Identifier](StructureDefinition-ch-ema-loc-identifier.md) 

*  [FOPH Dossier Number](StructureDefinition-ch-foph-dossier-number.md) 

*  [SMC Identifier](StructureDefinition-ch-smc-loc-identifier.md) 

